--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 
 <body>
-  <header class="header">
+  <div id="root"></div>
+  <div id="intersector"></div>
+  <!-- <header class="header">
     <div class="wrapper">
       <img src="./images/logo.png" alt="">
     </div>
@@ -38,8 +40,8 @@
         <span class="movie-rate">10</span>
       </article>
     </section>
-  </div>
-  <script type="module" src="./js/app.js"></script>
+  </div> -->
+  <script type="module" src="./src/index.js"></script>
 </body>
 
 </html>
